refinement first section

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
-        <h2>[Cover Title]</h2>
-        <h3>[Cover Subtitle]</h3>
+        <h2>Reassembling the Republic of Letters</h2>
+        <h3>Work and Achievements of the Action.</h3>
       </div>
     </div>
   </div>
@@ -26,7 +26,7 @@
         <div class="clearfix"></div>
         <div class="col-sm-6 col-sm-offset-3">
           <p>Between 1500 and 1800, a revolution in postal communication allowed ordinary men and women to scatter letters across and beyond Europe. This exchange helped knit together what contemporaries called the respublica litteraria, a knowledge-based civil society, crucial to that era’s intellectual breakthroughs, and formative of many modern European values and institutions.</p>
-          <p>Ironically, the exchange of letters which created this community also dispersed the documentation required to study it, posing enormous difficulties for historians of the subject ever since.<br/>To reassemble that scattered material and chart the history of that imagined community we need a revolution in digital communications.</p>
+          <p>We can make an attempt of understanding the complexity of this phenomenon taking as example the correspondence of Samuel Hartlib (ca. 1600 – 10 March 1662), German-British polymath and active promoter and expert writer in many fields.</p>
         </div>
       </div>
     </div>
@@ -38,7 +38,34 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
-          <p>This <b>COST Action</b> is dedicated to envisaging the open-access, open-source, transnational digital infrastructure capable of facilitating the radically multilateral collaboration needed to reassemble this scattered documentation and to support a new generation of scholarly methods and research questions.</p>
+          <p>Ironically, the exchange of letters which created this community also dispersed the documentation required to study it, posing enormous difficulties for historians of the subject ever since. This is why some items are not visualised on the map.</p>
+          <p>For each letter we have a set of attached information, called metadata, which comprehend details such as date, sender, recipient, destination, origin, etc.</p>
+          <p>This data is often very inconsistent.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="chart col-sm-12">
+        <img class="img-responsive" src="images/letters-info.png" width="680" style="margin:auto;" />
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+          <p>Sometimes we know about the existance of letters delivered from a particular city of origin, but the destination addresses have been lost and in some other cases it is just the opposite.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="chart col-sm-12">
+        <img class="img-responsive" src="images/destination-unknown.png" width="549" style="margin:auto;" />
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+          <p>Furthermore there are even more complicated examples regarding the existance of a letter without both the origin and destination location, or even without a date.<br/>To reassemble that scattered material and chart the history of that imagined community we need a revolution in digital communications.</p>
+          <p>This COST Action is dedicated to envisaging the open-access, open-source, transnational digital infrastructure capable of facilitating the radically multilateral collaboration needed to reassemble this scattered documentation and to support a new generation of scholarly methods and research questions.</p>
         </div>
       </div>
     </div>
@@ -53,7 +80,7 @@
     </div>
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
-        <h2>A Network</h2>
+        <h2>A Research Network</h2>
         <h3>Coordination for better results</h3>
       </div>
       <div class="clearfix"></div>
@@ -63,16 +90,15 @@
         <p><b>COST Action IS1310 Reassembling the Republic of Letters, 1500–1800</b> is therefore essentially a networking programme. It emerged in response to the expectation that that the ongoing revolution in digital communications technology can solve the scholarly problem created by the evolution of postal communication in the early modern period, thanks to the contribution of various sholars and researchers spread in different research groups.</p>
       </div>
     </div>
+  </div>
 
-
-
+  <div class="container">
     <div class="network-stage">
-      <div class="row">
-        
-        <div sticky offset="0" usePlaceholder="false" confine="true" class="net-img-container col-sm-8">
+      <div class="row">   
+        <div class="net-img-container col-sm-8 col-md-9" sticky offset="0" usePlaceholder="false" confine="true">
           <img id="network" src="images/2-net1.svg" class="img-responsive">
         </div>
-        <div class="col-sm-4 col-sm-offset-8">
+        <div class="col-sm-4 col-md-3 col-sm-offset-8">
           <div class="net-stage" trigger-persist="true" scroll-trigger="animateNetwork()" urlimg="images/2-net1.svg">
             <h4>2.1 Research at National Level</h4>
             <h4>–</h4>
@@ -93,9 +119,10 @@
           <div class="room h37-5vh"></div>
         </div>
       </div>
-
     </div>
+  </div>
 
+  <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
         <p>In essence, a new scholarly network is needed in order to study the older scholarly network of the early modern period. To sustain this new network, we need a new breed of digital networking tools; and the purpose of this Action is to assemble the network needed to design these tools: a network to devise a networking platform to support a network studying past networks.</p>
@@ -106,8 +133,7 @@
 </section>
 
 <section class="container-fluid"  id="section3">
-  <div class=container>
-    
+  <div class=container>  
     <div class="row">
       <div class="big-number col-sm-4 col-sm-offset-4">
         <div class=""><span>3</span></div>
@@ -122,78 +148,79 @@
       <div class="h-row col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-6 col-sm-offset-3">
-        <p>[Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor.]</p>
+        <p>[Text.]</p>
       </div>
     </div>
        
     <div class="row dendogram-stage">
-      <div class="col-sm-4">
-        <div class="room h37-5vh"></div>
+      
+      <div sticky usePlaceholder="true" confine="true" sticky-class="magic-margin" class="dend-img-container col-sm-8 col-md-9">
+        <!-- <img id="dendogram" class="img-responsive" src="images/3-dend1.svg" alt="Dendogram"> -->
+      </div> <!-- Close col-sm-8 -->
+
+      <div class="col-sm-4 col-md-3 col-sm-offset-8 col-md-offset-9">
+        <!-- <div class="room h37-5vh"></div> -->
         <div id="ds1" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds1')" stage="3-1">
           <h4>3.1 Four Communities</h4>
           <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
         <div id="ds2" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds2')" stage="3-2">
-          <h4>3.2 A number of Collaborators</h4>
+          <h4>3.2 Involved People</h4>
           <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
         <div id="ds3" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds3')" stage="3-1">
           <h4>3.3 Working Groups</h4>
           <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
         <div id="ds4" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds4')" stage="3-2">
-          <h4>3.4 Space and Time</h4>
+          <h4>3.4 WG1: Space and Time</h4>
           <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
         <div id="ds5" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds5')" stage="3-1">
-          <h4>3.5 People and Network</h4>
+          <h4>3.5 WG2: People and Network</h4>
           <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
         <div id="ds6" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds6')" stage="3-2">
-          <h4>3.6 Text and Topics</h4>
+          <h4>3.6 WG3: Text and Topics</h4>
           <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
         <div id="ds7" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds7')" stage="3-1">
-          <h4>3.7 Documents and Collections</h4>
+          <h4>3.7 WG4: Documents and Collections</h4>
           <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
         <div id="ds8" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds8')" stage="3-2">
-          <h4>3.8 Data Exchange and Strategic Planning</h4>
+          <h4>3.8 WG5: Data Exchange and Strategic Planning</h4>
           <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
         <div id="ds9" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds9')" stage="3-1">
-          <h4>3.9 Visualisation and acommunication</h4>
+          <h4>3.9 WG6: Visualisation and acommunication</h4>
           <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
         <div id="ds10" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds10')" stage="3-2">
           <h4>3.10 Affiliates and Management</h4>
           <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          <p class="description">[Text.]</p>
         </div>
         <div class="room h37-5vh"></div>
       </div> <!-- Close col-sm-4 -->
-
-      <div sticky usePlaceholder="false" confine="true" sticky-class="magic-margin" class="dend-img-container col-sm-8">
-        <!-- <img id="dendogram" class="img-responsive" src="images/3-dend1.svg" alt="Dendogram"> -->
-      </div> <!-- Close col-sm-8 -->
 
     </div> <!-- Close Row, dendogram-stage -->
 
@@ -212,13 +239,13 @@
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
         <h2>Events and Activities</h2>
-        <h3>Where and When everithing is taking place</h3>
+        <h3>[Text.]</h3>
       </div>
       <div class="clearfix"></div>
       <div class="h-row col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-6 col-sm-offset-3">
-        <p>THIS SECTION IS STILL COMPLETELY A DRAFT. [Nullam quis risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis euismod semper. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.]</p>
+        <p>[Text.]</p>
       </div>
       <div class="clearfix"></div>
       <div class="col-sm-12">
