--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -35,11 +35,18 @@ body {
   font-family: $serif;
   font-weight: 400;
   color: $veryDarkBlue;
-  padding-top: $navbarHeight;
 }
 
 .navbar-default {
   height: $navbarHeight;
+}
+
+.navbar-brand {
+  padding: 5px;
+}
+
+.navbar-brand img {
+  height: 100%;
 }
 
 .big-number {
@@ -84,8 +91,10 @@ section:nth-child(1) {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 500px;
+  height: 100vh;
   width: 100%;
+  box-sizing: border-box;
+  padding-top: $navbarHeight;
 }
 
 section:nth-child(2) {
@@ -201,6 +210,11 @@ margin: 0px;
     font-size: 16px;
     padding: 8px 8px;
   }
+}
+
+.chart {
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .network-stage {
@@ -348,7 +362,7 @@ margin: 0px;
 
 .node circle {
   fill: #eee;
-  fill-opacity: 0.5;
+  fill-opacity: 0.6;
   stroke: #999;
   stroke-width: 1px;
 }
