--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,7 +26,8 @@
         <div class="clearfix"></div>
         <div class="col-sm-6 col-sm-offset-3">
           <p>Between 1500 and 1800, a revolution in postal communication allowed ordinary men and women to scatter letters across and beyond Europe. This exchange helped knit together what contemporaries called the respublica litteraria, a knowledge-based civil society, crucial to that era’s intellectual breakthroughs, and formative of many modern European values and institutions.</p>
-          <p>We can make an attempt of understanding the complexity of this phenomenon taking as example the correspondence of Samuel Hartlib (ca. 1600 – 10 March 1662), German-British polymath and active promoter and expert writer in many fields.</p>
+          <p><b>For instance</b>, We can make an attempt of understanding the complexity of this phenomenon taking as example the correspondence of Samuel Hartlib (ca. 1600 – 10 March 1662), German-British polymath and active promoter and expert writer in many fields.</p>
+          <p>In the following map we tried to visualise Hartlib's correspondence network.</p>
         </div>
       </div>
     </div>
@@ -38,6 +39,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
+          <p class="caption"><b class="highlight">About the map</b>: every path stands for an hypothetic route that a letter went across  during its journey from the writer to the recipient (we calculated them using <a href="" target="_blank">this</a> service). Even if roads have changed in the past centuries, we believe this is a valid alternative to a visualisation that uses only straight lines to make correspondence visible.</p>
           <p>Ironically, the exchange of letters which created this community also dispersed the documentation required to study it, posing enormous difficulties for historians of the subject ever since. This is why some items are not visualised on the map.</p>
           <p>For each letter we have a set of attached information, called metadata, which comprehend details such as date, sender, recipient, destination, origin, etc.</p>
           <p>This data is often very inconsistent.</p>
@@ -160,61 +162,61 @@
 
       <div class="col-sm-4 col-md-3 col-sm-offset-8 col-md-offset-9">
         <!-- <div class="room h37-5vh"></div> -->
-        <div id="ds1" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds1')" stage="3-1">
+        <div id="ds1" class="dend-stage" XXXtrigger-persist="true" scroll-trigger="animateDendogram('ds1')" stage="3-1">
           <h4>3.1 Four Communities</h4>
           <h4>–</h4>
           <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
-        <div id="ds2" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds2')" stage="3-2">
+        <div id="ds2" class="dend-stage" XXXtrigger-persist="true" scroll-trigger="animateDendogram('ds2')" stage="3-2">
           <h4>3.2 Involved People</h4>
           <h4>–</h4>
           <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
-        <div id="ds3" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds3')" stage="3-1">
+        <div id="ds3" class="dend-stage" XXXtrigger-persist="true" scroll-trigger="animateDendogram('ds3')" stage="3-1">
           <h4>3.3 Working Groups</h4>
           <h4>–</h4>
           <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
-        <div id="ds4" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds4')" stage="3-2">
+        <div id="ds4" class="dend-stage" XXXtrigger-persist="true" scroll-trigger="animateDendogram('ds4')" stage="3-2">
           <h4>3.4 WG1: Space and Time</h4>
           <h4>–</h4>
           <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
-        <div id="ds5" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds5')" stage="3-1">
+        <div id="ds5" class="dend-stage" XXXtrigger-persist="true" scroll-trigger="animateDendogram('ds5')" stage="3-1">
           <h4>3.5 WG2: People and Network</h4>
           <h4>–</h4>
           <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
-        <div id="ds6" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds6')" stage="3-2">
+        <div id="ds6" class="dend-stage" XXXtrigger-persist="true" scroll-trigger="animateDendogram('ds6')" stage="3-2">
           <h4>3.6 WG3: Text and Topics</h4>
           <h4>–</h4>
           <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
-        <div id="ds7" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds7')" stage="3-1">
+        <div id="ds7" class="dend-stage" XXXtrigger-persist="true" scroll-trigger="animateDendogram('ds7')" stage="3-1">
           <h4>3.7 WG4: Documents and Collections</h4>
           <h4>–</h4>
           <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
-        <div id="ds8" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds8')" stage="3-2">
+        <div id="ds8" class="dend-stage" XXXtrigger-persist="true" scroll-trigger="animateDendogram('ds8')" stage="3-2">
           <h4>3.8 WG5: Data Exchange and Strategic Planning</h4>
           <h4>–</h4>
           <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
-        <div id="ds9" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds9')" stage="3-1">
+        <div id="ds9" class="dend-stage" XXXtrigger-persist="true" scroll-trigger="animateDendogram('ds9')" stage="3-1">
           <h4>3.9 WG6: Visualisation and acommunication</h4>
           <h4>–</h4>
           <p class="description">[Text.]</p>
         </div>
         <div class="room h500"></div>
-        <div id="ds10" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds10')" stage="3-2">
+        <div id="ds10" class="dend-stage" XXXtrigger-persist="true" scroll-trigger="animateDendogram('ds10')" stage="3-2">
           <h4>3.10 Affiliates and Management</h4>
           <h4>–</h4>
           <p class="description">[Text.]</p>
@@ -245,11 +247,12 @@
       <div class="h-row col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-6 col-sm-offset-3">
-        <p>[Text.]</p>
+        <p>The activities funded by COST also include Workshops held at irregular intervals depending on need, Training Schools designed to induct younger scholars into the techniques and methods being pioneered by the group, and Short Term Scientific Missions (STSMs), which fund international exchange visits within the network likewise targeted at colleagues in early career.</p>
+        <img class="img-responsive" src="images/events-details.svg" style="width: 367px; margin: auto; margin-top: 60px; margin-bottom: 50px;" />
       </div>
       <div class="clearfix"></div>
       <div class="col-sm-12">
-        <img src="images/4-gant0.svg" class="img-responsive">
+        <iframe id="events-map" frameBorder='0' src='https://a.tiles.mapbox.com/v4/iosonosempreio.01ajg1j8/attribution,zoompan.html?access_token=pk.eyJ1IjoiaW9zb25vc2VtcHJlaW8iLCJhIjoiOHpYSnpLQSJ9.2ZxP5dSbQhs-dH0PhXER9A'></iframe>
       </div>
     </div>
   </div>
