--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -105,7 +105,7 @@ section:nth-child(1) {
   }
 
   img {
-    width: 100%;
+    width: 100vh;
     height: auto;
   }
 }
@@ -492,4 +492,44 @@ margin-bottom: 32px;
   box-sizing: border-box;
   margin:0;
   padding:0;
+}
+
+
+//linechart
+
+linechart-letter-distribution {
+  border: 0px solid white;
+  border-width: 12px;
+  width: 100vw;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  box-sizing: border-width;
+
+  .axis path,
+  .axis line {
+    fill: none;
+    stroke: $lightGrey;
+    shape-rendering: crispEdges;
+  }
+
+  .axis .tick text, .axis text {
+    fill: $lightGrey;
+    font-family: $sans;
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+
+  .x.axis path {
+    // display: none;
+  }
+
+  .line {
+    fill: none;
+    stroke: $yellow;
+    stroke-width: 1px;
+  }
+
 }
