--- a/app/views/main.html
+++ b/app/views/main.html
@@ -221,7 +221,7 @@
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
         <h2>Worked Example</h2>
-        <h3>A KNOWLEDGE-BASED CIVIL SOCIETY</h3>
+        <h3>~</h3>
       </div>
       <div class="clearfix"></div>
       <div class="h-row col-sm-2 col-sm-offset-5"></div>
@@ -272,9 +272,13 @@
       </div>
     </div>
   </div>
-  <div class="row" style="border: 12px solid white; width: 100%; height: 50vh; display: flex; justify-content: center; align-items: center;">
+  
+  <linechart-letter-distribution  style="width: 100%;"></linechart-letter-distribution>
+
+  <!-- <div class="row" style="border: 12px solid white; width: 100%; height: 50vh; display: flex; justify-content: center; align-items: center;">
     <span>Barchart</span>
-  </div>
+  </div> -->
+
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
