--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,13 +1,8 @@
 <section class="container-fluid">
-  <div class="container">
-    <div class="row">
-      <!-- <div class="col-sm-6 col-sm-offset-3">
-        <h2>Reassembling the Republic of Letters</h2>
-        <h3>Work and Achievements of the Action.</h3>
-      </div> -->
-      <img src="images/cover.png" />
-    </div>
-  </div>
+  <div class="level3 hand-left"></div>
+  <div class="level3 hand-right"></div>
+  <div class="level2"></div>
+  <div class="level1"></div>
 </section>
 
 <section class="container-fluid" id="section1">
@@ -61,7 +56,7 @@
           <img src="images/geographical-extent.png" class="img-responsive">
         </div>
         <div class="col-sm-4">
-          <div class="net-stage" trigger-persist="true" scroll-trigger="animateNetwork()" urlimg="images/2-net1.svg">
+          <div class="net-stage">
             <h4>2.1 Research at National Level</h4>
             <h4>–</h4>
             <p class="description">Spread all over the coutries involved in the COST Action there are a number of reaserachers dealing with the digital humanities, and especially with the study of correspondence.</p>
@@ -69,18 +64,18 @@
         </div>
       </div>
 
-      <!-- <div class="row vertical-centered">   
+      <div class="row vertical-centered">   
         <div class="net-img-container col-sm-8" stickyXXX offset="0" usePlaceholder="false" confine="true">
-          <img class="img-responsive" src="http://placehold.it/900X900">
+          <img class="img-responsive" src="images/stsm-network.png">
         </div>
         <div class="col-sm-4">
-          <div class="net-stage" trigger-persist="true" scroll-trigger="animateNetwork()" urlimg="images/2-net1.svg">
+          <div class="net-stage">
             <h4>2.2 Fostering Collaboration</h4>
             <h4>–</h4>
             <p class="description">Network of STSM</p>
           </div>     
         </div>
-      </div> -->
+      </div>
       
     </div>
   </div>
@@ -247,9 +242,8 @@
     </div>
   </div>
 
-  <div class="row" style="border: 12px solid white; width: 100%; height: 50vh; display: flex; justify-content: center; align-items: center;">
-    <span>Map</span>
-  </div>
+  <map-emlo style="width: 100%;"></map-emlo>
+
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
