--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -98,6 +98,11 @@ section:nth-child(1) {
   box-sizing: border-box;
   padding-top: $navbarHeight;
 
+  background-image: url('../../images/cover_BG.png');
+  background-size: 1440px auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+
   .row {
     display: flex;
     justify-content: center;
@@ -107,6 +112,56 @@ section:nth-child(1) {
   img {
     width: 100vh;
     height: auto;
+  }
+
+  .level1 {
+    height: 100vh;
+    width: 100vw;
+    display: block;
+    position: absolute;
+    top:0;
+    left: 0;
+    background-image: url('../../images/cover_L1.png');
+    background-size: 740px auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  .level2 {
+    height: 100vh;
+    width: 100vw;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url('../../images/cover_L2.png');
+    background-size: 1200px auto;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+  }
+
+  .level3.hand-left {
+    height: 500px;
+    width: 500px;
+    display: block;
+    background-image: url('../../images/cover_L3a.png');
+    background-size: 500px 500px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border: 0px solid black;
+  }
+
+  .level3.hand-right {
+    height: 500px;
+    width: 500px;
+    display: block;
+    background-image: url('../../images/cover_L3b.png');
+    background-size: 500px 500px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border: 0px solid black;
   }
 }
 
@@ -268,15 +323,22 @@ margin-bottom: 32px;
   margin-bottom: 80px;
 }
 
-.net-stage, .dend-stage {
+.net-stage {
+  transition: all 0s;
+  // margin-top: 0;
+  // margin-bottom: 0px;
+}
+
+.dend-stage {
   opacity: 0.5;
   transition: all 0s;
   // margin-top: 0;
   // margin-bottom: 0px;
 }
 
+
 .dend-stage, .dend-two-stage {
-  border: 1px solid black;
+  // border: 1px solid black;
 }
 
 .dend-stage {
@@ -494,6 +556,53 @@ margin-bottom: 32px;
   padding:0;
 }
 
+// map
+map-emlo {
+  border: 0px solid white;
+  border-width: 12px;
+  width: 100vw;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  box-sizing: border-width;
+
+  svg {
+    position: relative;
+  }
+  path {
+    fill: none;
+    stroke-width: 1px;
+    stroke: $veryDarkBlue;
+    stroke-opacity: 0.5;
+    /*shape-rendering:crispEdges;*/
+  }
+
+  circle {
+    stroke-width: 2px;
+    stroke: $yellow;
+    fill-opacity: 0;
+    opacity: 0.75;
+  }
+
+  circle.arrived {
+    fill: $orange;
+    fill-opacity:1;
+    stroke-width: 0px;
+    opacity: 0.2;
+  }
+
+  .date{
+    position: absolute;
+    z-index: 1;
+    font-size: 16px;
+    padding: 8px 8px;
+  }
+
+
+
+}
 
 //linechart
 
@@ -519,7 +628,13 @@ linechart-letter-distribution {
     fill: $lightGrey;
     font-family: $sans;
     text-transform: uppercase;
-    font-weight: 600;
+  }
+
+  .axis .special {
+    font-family: $serif;
+    text-transform: capitalize;
+    font-style: italic;
+
   }
 
   .x.axis path {
